country-flags - getResourceAsStream